--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,4 +4,8 @@
     text-align: center;
     padding-top: 10px;
     padding-bottom: 5px;
+    position: fixed;
+    bottom: 0;
+    left:0;
+    right:0;
 }
