--- a/src/pages/adminProducts/products.css
+++ b/src/pages/adminProducts/products.css
@@ -1,3 +1,9 @@
 .buttons-prod a:first-child,.buttons-prod a:nth-child(2){
   margin-right: 10px;
 }
+.products{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 50px;
+}
